--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ inbound = [
     "tonic/codegen",
 ]
 outbound = [
+    "tls-route",
     "grpc-route",
     "destination",
     "http-route",
@@ -39,6 +40,7 @@ outbound = [
 meta = []
 net = ["ipnet", "thiserror"]
 tap = ["h2", "http-types", "net", "prost-types", "tonic/codegen"]
+tls-route = []
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg", "docsrs"]
